--- a/css/styles.css
+++ b/css/styles.css
@@ -342,3 +342,25 @@ form#createForm .cancel-btn:hover {
   pointer-events: none !important;
   user-select: none !important;
 }
+
+td.numberSP {
+  text-align: right;
+  white-space: nowrap; /* Запрещаем перенос строк */
+  padding-right: 15px;
+}
+
+td.numberSP .number-part {
+  display: block;
+  line-height: 1.3;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2px;
+  margin-bottom: 2px;
+}
+
+td.numberSP .number-part:last-child {
+  border-bottom: none;
+  padding-bottom: 0;
+  margin-bottom: 0;
+  font-size: inherit;
+  color: inherit;
+}
