--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,53 @@ body {
   color: #333;
 }
 
+/* Стили для страницы ошибки */
+.error-page {
+  font-family: Arial, sans-serif;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  text-align: center;
+}
+
+.error-page img {
+  max-width: 40%;
+  height: auto;
+}
+
+.error-page h1 {
+  font-size: 3rem;
+  color: #ff6b6b;
+  margin: 20px 0;
+}
+
+.error-page p {
+  font-size: 1.2rem;
+  color: #555;
+  margin: 10px 0 20px;
+}
+
+.error-page a {
+  display: inline-block;
+  margin-bottom: 20px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  color: #fff;
+  background-color: #007bff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.error-page a:hover {
+  background-color: #0056b3;
+}
+
 /* Стили для заголовка */
 h1 {
   text-align: center;
@@ -104,7 +151,7 @@ td {
 }
 
 th.number, td.number {
-  text-align: right;
+  text-align: left;
   padding-right: 15px
 }
 
@@ -362,4 +409,19 @@ td.numberSP .number-part:last-child {
   margin-bottom: 0;
   font-size: inherit;
   color: inherit;
+}
+
+/* Стили для инпутов */
+input {
+  border: 1px solid #000 !important;
+}
+
+input:invalid {
+  border-color: #ff4444 !important;
+}
+
+.example {
+  color: #666;
+  font-size: 0.9em;
+  margin-left: 8px;
 }
